# atlas-system-agent

./: .clang-format  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  atlas-agent.cc  build.sh  conanfile.py  config.h  config.h.in  dcmgStuff.cpp  dependencies.bzl  docker-build.sh  requirements.txt  run-build.sh  sample-config.cc  setup-venv.sh  test_nvml.cc  travis-build.sh
AtlasAgent/: CMakeLists.txt
AtlasAgent/src/: atlas-agent.cc  atlas-agent.cpp  atlas-agent.h  k8s-agent.cpp  system-agent.cpp  titus-agent.cpp
Dockerfiles/: README.md  (+1 more)
lib/: CMakeLists.txt  atlas-helpers.cc  atlas-helpers.h  aws.cc  aws.h  aws_test.cc  cgroup.cc  cgroup.h  cgroup_test.cc  chrony.cc  chrony.h  config.h  counters.cc  counters.h  cpufreq.cc  cpufreq.h  cpufreq_test.cc  dbus.cc  dbus.h  dcgm_executor.cc  dcgm_executor.h  dcgm_stats.cc  dcgm_stats.h  dcgm_stats_main.cc  dcgm_stats_test.cc  disk.cc  disk.h  disk_test.cc  ethtool.h  ethtool_test.cc  files.h  gpu_test.cc  gpumetrics.h  http_client.h  log_entry.h  logger.cc  logger.h  measurement_utils.h  monotonic_timer.h  monotonic_timer_test.cc  (+23 more)
lib/AWS/: CMakeLists.txt  aws.h  aws_test.cc
lib/AWS/src/: aws.h
lib/AWS/test/: aws_test.cc
lib/CGroup/: CMakeLists.txt  cgroup.h  cgroup_test.cc
lib/CGroup/src/: cgroup.cpp  cgroup.h
lib/CGroup/test/: cgroup_test.cc
lib/CPUFreq/: CMakeLists.txt  cpufreq.h  cpufreq_test.cc
lib/CPUFreq/src/: cpufreq.h
lib/CPUFreq/test/: cpufreq_test.cc
lib/DCGM/: CMakeLists.txt  dcgm_stats.cc  dcgm_stats.h  dcgm_stats_test.cc
lib/DCGM/src/: dcgm_stats.cc  dcgm_stats.h
lib/DCGM/test/: dcgm_stats_test.cc
lib/Disk/: CMakeLists.txt  disk.h  disk_test.cc
lib/Disk/src/: disk.cc  disk.h
lib/Disk/test/: disk_test.cc
lib/Ethtool/: CMakeLists.txt  ethtool.h  ethtool_test.cc
lib/Ethtool/src/: ethtool.h
lib/Ethtool/test/: ethtool_test.cc
lib/Files/: CMakeLists.txt  files.h
lib/Files/src/: files.h
lib/HttpClient/: CMakeLists.txt  http_client.h
lib/HttpClient/src/: http_client.cpp  http_client.h  http_client_instantiations.cpp  log_entry.h
lib/Logger/: CMakeLists.txt  log_entry.h
lib/MeasurementUtils/: CMakeLists.txt  measurement_utils.h
lib/MeasurementUtils/src/: measurement_utils.h
lib/MonotonicTimer/: CMakeLists.txt  monotonic_timer.h  monotonic_timer_test.cc
lib/MonotonicTimer/src/: monotonic_timer.h
lib/MonotonicTimer/test/: monotonic_timer_test.cc
lib/NTP/: CMakeLists.txt  ntp.h  ntp_test.cc
lib/NTP/test/: ntp_test.cc
lib/NVML/: CMakeLists.txt  gpu_test.cc  gpumetrics.h  nvml.cc
lib/NVML/src/: gpumetrics.h  nvml.cc
lib/NVML/test/: gpu_test.cc  test_nvml.cc
lib/Perfmetrics/: CMakeLists.txt  perfmetrics.h  perfmetrics_test.cc
lib/Perfmetrics/src/: perfmetrics.h
lib/Perfmetrics/test/: perfmetrics_test.cc
lib/PressureStall/: CMakeLists.txt  pressure_stall.h  pressure_stall_test.cc
lib/PressureStall/test/: pressure_stall_test.cc
lib/Proc/: CMakeLists.txt  proc.h  proc_test.cc
lib/Proc/src/: proc.cpp  proc.h
lib/Proc/test/: proc_test.cc
lib/ServiceMonitor/: CMakeLists.txt  service_monitor.cc  service_monitor.h  service_monitor_test.cc  service_monitor_utils.cc
lib/ServiceMonitor/src/: service_monitor.cc  service_monitor.h  service_monitor_utils.h
lib/ServiceMonitor/test/: service_monitor_test.cc
lib/Tagging/: CMakeLists.txt  tagger.h  tagger_test.cc  tagging_registry.h  tagging_registry_test.cc
lib/Tagging/src/: tagger.h  tagging_registry.h
lib/Tagging/test/: tagger_test.cc  tagging_registry_test.cc
lib/Util/: CMakeLists.txt  util.cc  util.h
lib/Util/src/: util.cc  util.h
lib/Util/test/: utils_test.cc
lib/collectors/: CMakeLists.txt
lib/collectors/amd_smi/: CMakeLists.txt  amd_smi.cpp  amd_smi.h  gpumetrics.cpp  gpumetrics.h
lib/collectors/aws/: CMakeLists.txt
lib/collectors/aws/src/: aws.h
lib/collectors/aws/test/: aws_test.cpp
lib/collectors/cgroup/: CMakeLists.txt
lib/collectors/cgroup/src/: cgroup.cpp  cgroup.h
lib/collectors/cgroup/test/: cgroup_test.cpp
lib/collectors/cpu_freq/: CMakeLists.txt
lib/collectors/cpu_freq/src/: cpu_freq.cpp  cpu_freq.h  cpufreq.h
lib/collectors/cpu_freq/test/: cpu_freq_test.cpp  cpufreq_test.cc  cpufreq_test.cpp
lib/collectors/dcgm/: CMakeLists.txt
lib/collectors/dcgm/src/: dcgm_stats.cpp  dcgm_stats.h
lib/collectors/dcgm/test/: dcgm_stats_test.cc  dcgm_stats_test.cpp
lib/collectors/disk/: CMakeLists.txt
lib/collectors/disk/src/: disk.cpp  disk.h
lib/collectors/disk/test/: disk_test.cc  disk_test.cpp
lib/collectors/ebs/: CMakeLists.txt
lib/collectors/ebs/src/: ebs.cpp  ebs.h
lib/collectors/ebs/test/: ebs_test.cpp
lib/collectors/ethtool/: CMakeLists.txt
lib/collectors/ethtool/src/: ethtool.cpp  ethtool.h
lib/collectors/ethtool/test/: ethtool_test.cpp
lib/collectors/ntp/: CMakeLists.txt
lib/collectors/ntp/src/: ntp.cpp  ntp.h
lib/collectors/ntp/test/: ntp_test.cpp
lib/collectors/nvml/: CMakeLists.txt
lib/collectors/nvml/src/: gpumetrics.h  nvml.cpp  nvml.h
lib/collectors/perf_metrics/: CMakeLists.txt
lib/collectors/perfspect/: CMakeLists.txt
lib/collectors/pressure_stall/: CMakeLists.txt
lib/collectors/proc/: CMakeLists.txt
lib/collectors/service_monitor/: CMakeLists.txt
lib/files/: CMakeLists.txt
lib/files/src/: files.h
lib/http_client/: CMakeLists.txt
lib/http_client/src/: http_client.cpp  http_client.h  http_client_instantiations.cpp  log_entry.h
lib/internal/: cgroup.inc  disk.inc  http_client.inc  proc.inc
lib/logger/: CMakeLists.txt
lib/logger/src/: logger.cpp  logger.h
lib/measurement_utils/: CMakeLists.txt
lib/measurement_utils/src/: measurement_utils.cpp  measurement_utils.h
lib/monotonic_timer/: CMakeLists.txt
lib/monotonic_timer/src/: monotonic_timer.cpp  monotonic_timer.h
lib/monotonic_timer/test/: monotonic_timer_test.cpp
lib/tagging/: CMakeLists.txt
lib/tagging/src/: tagger.h  tagging_registry.h
lib/tagging/test/: tagger_test.cc  tagging_registry_test.cc
lib/util/: CMakeLists.txt
lib/util/src/: util.cc  util.cpp  util.h
lib/util/test/: utils_test.cpp
(+163 files in other folders)
