add_subdirectory(aws)
add_subdirectory(cgroup)
add_subdirectory(cpu_freq)
add_subdirectory(dcgm)
add_subdirectory(disk)
add_subdirectory(ebs)
add_subdirectory(ethtool)
add_subdirectory(ntp)
add_subdirectory(nvml)
add_subdirectory(perf_metrics)
add_subdirectory(perfspect)
add_subdirectory(pressure_stall)
add_subdirectory(proc)
add_subdirectory(service_monitor)